--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.5.3",
     "hbs": "^4.0.6",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemailer": "^6.3.1"
   }
 }
