--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-sass": "^4.0.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "handlebars": "^4.5.3",
     "hbs": "^4.0.6",
